--- a/style/contact.css
+++ b/style/contact.css
@@ -12,10 +12,14 @@
 }
 
 :root {
-    --orange: #fa5b0f;
+    --blue: #08a9c1;
     --black: #000000;
     --white: #fafafa;
     --gray: #898989;
+}
+
+html {
+	overflow: auto;
 }
 
 .contact-content {
@@ -23,7 +27,6 @@
     justify-content: center;
     align-items: center;
 }
-
 
 .contact form {
 	max-width: 70rem;
@@ -47,18 +50,9 @@
 	background: rgba(137,137,137, 0.2);
 	border-radius: 0.8rem;
     margin: 0.5rem 0;
-	border: 1px solid var(--main-color);
+	border: 1px solid var(--blue);
 }
 
 .contact form .input-box input {
 	width: 49%;
-}
-
-.contact form textarea {
-	resize: none;
-}
-
-.contact form .btn {
-	margin-top: 2rem;
-	cursor: pointer;
 }
