--- a/style/home.css
+++ b/style/home.css
@@ -114,7 +114,7 @@ section {
     margin-top: 15px;
 }
 
-.btn:not(:last-child) {
+.btn-container  .btn:not(:last-child) {
     display: inline-block;
     border: 2px solid var(--blue);
     border-radius: 50px;
@@ -129,7 +129,7 @@ section {
     box-shadow: 0 0 1rem var(--blue);
 }
 
-.btn:last-child {
+.btn-container  .btn:last-child {
     display: inline-block;
     border-radius: 50px;
     background: rgba(0, 0, 0, 0.5);
@@ -144,14 +144,14 @@ section {
     box-shadow: 0 0 1rem var(--blue);
 }
 
-.btn:hover {
+.btn-container .btn:hover {
     background: rgba(0, 0, 0, 0.5);
     color: var(--blue);
     border: 2px solid var(--blue);
     box-shadow: none;
 }
 
-.btn:last-child:hover {
+.btn-container  .btn:last-child:hover {
     background: var(--blue);
     color: var(--white);
 }
