--- a/style/contact.css
+++ b/style/contact.css
@@ -19,7 +19,14 @@
 }
 
 html {
-	overflow: auto;
+    overflow-y: auto;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .contact-content {
@@ -47,7 +54,7 @@ html {
 	padding: 10px;
 	font-size: 1.6rem;
 	color: var(--text-color);
-	background: rgba(137,137,137, 0.2);
+	background: rgba(0,0,0, 0.6);
 	border-radius: 0.8rem;
     margin: 0.5rem 0;
 	border: 1px solid var(--blue);
@@ -70,6 +77,7 @@ html {
     transition-duration: 300ms;
     font-weight: 600;
     box-shadow: 0 0 1rem var(--blue);
+    margin-top: 20px;
 }
 
 .btn:hover {
