new file:   images/thumbnail1.png 	new file:   images/thumbnail2.png 	new file:   images/thumbnail3.png 	new file:   images/thumbnail4.png 	modified:   pages/about.html 	modified:   pages/work.html 	modified:   style/home.css 	modified:   style/media.css 	modified:   style/work.css 	new file:   videos/video1.mp4 	new file:   videos/video2.mp4 	new file:   videos/video3.mp4 	new file:   videos/video4.mp4

--- a/style/media.css
+++ b/style/media.css
@@ -83,6 +83,11 @@ body {
 		grid-template-columns: 1fr;
 	}
 
+
+    .video-container {
+        grid-template-columns: 1fr;
+    }
+
     .skills {
         display: flex; 
         justify-content: center;
@@ -174,6 +179,14 @@ body {
     }
 
     .contact form .input-box input {
+        width: 100%;
+    }
+
+    .video-content .back-heading {
+        margin-bottom: 50px;
+    }
+
+    .video-container .video {
         width: 100%;
     }
 }
