modified:   pages/work.html 	modified:   script/work_script.js 	modified:   style/about.css 	modified:   style/contact.css 	modified:   style/skills.css 	modified:   style/work.css

--- a/style/work.css
+++ b/style/work.css
@@ -19,7 +19,12 @@
 }
 
 html {
-    overflow: auto;
+    background-image:url("../images/bg3.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+	overflow: auto;
 }
 
 body {
