--- a/style/about.css
+++ b/style/about.css
@@ -18,6 +18,14 @@
     --gray: #898989;
 }
 
+html {
+    background-image:url("../images/bg3.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 body {
     background-color: rgba(0, 0, 0, 0.5);
 }
