--- a/style/contact.css
+++ b/style/contact.css
@@ -19,7 +19,16 @@
 }
 
 html {
+    background-image:url("../images/bg3.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     overflow-y: auto;
+}
+
+body {
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .contact {
