--- a/style/skills.css
+++ b/style/skills.css
@@ -19,9 +19,17 @@
 }
 
 html {
+    background-image:url("../images/bg3.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     overflow: auto;
 }
 
+body {
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
 .skill-content {
     width: 80%;
